[tool.poetry]
name = "networks-course"
version = "0.1.0"
description = ""
authors = ["Benjamin D. Pedigo <bpedigo@jhu.edu>"]

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
graspologic = {version = "^3.0.0*", allow-prereleases = true}
colorcet = "^3.0.0"

[tool.poetry.dev-dependencies]
flake8 = "^4.0.1"
ipykernel = "^6.6.0"
jupyter-book = "^0.12.1"
black = {version = "^22.12.0", allow-prereleases = true, extras = ["jupyter"]}